finally fixed clipping problem - .propertyList line 215 in main .css!

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -210,7 +210,7 @@ fieldset,
 
 .property-list .fieldcontain {
     list-style: none;
-    overflow: hidden;
+    /* overflow: hidden;*/
     zoom: 1;
 }
 
